Pullout menu is no longer visible by scrolling sideways

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -38,3 +38,7 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+body {
+	overflow: hidden;
+}
